<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNubank"
    tools:context="test.Atividade.TelaCadastro">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtNovaConta"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageView
        android:id="@+id/imgContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txtNovaConta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/container_branco" />

    <ImageView
        android:id="@+id/imgNubank"
        android:layout_width="289dp"
        android:layout_height="113dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nubank_logo_0" />

    <View
        android:id="@+id/divider"
        android:layout_width="301dp"
        android:layout_height="3dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgNubank" />

    <TextView
        android:id="@+id/lblNomeCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/txtNomeCompleto"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgContainer" />

    <TextView
        android:id="@+id/lblCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtCpf"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNomeCompleto" />

    <TextView
        android:id="@+id/lblDataNsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtDataNsc"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCPF" />

    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtSenha"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDataNsc" />

    <EditText
        android:id="@+id/txtNomeCompleto"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@color/colorFundoInput"
        android:ems="10"
        android:hint="@string/txtNomeCompleto"
        android:inputType="textPersonName"
        android:shadowColor="@color/colorNubank"
        android:singleLine="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblNomeCompleto" />

    <EditText
        android:id="@+id/txtCPF"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@color/colorFundoInput"
        android:ems="10"
        android:hint="@string/txtCpf"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblCPF" />

    <EditText
        android:id="@+id/txtDataNsc"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@color/colorFundoInput"
        android:ems="10"
        android:hint="@string/txtDataNsc"
        android:inputType="date"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDataNsc" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@color/colorFundoInput"
        android:ems="10"
        android:hint="@string/txtSenha"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblSenha" />

    <Button
        android:id="@+id/btnCadastrar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="224dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtCadastrar"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSenha" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="142dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:onClick="botaoCancelarClick"
        android:text="@string/txtCancelar"
        android:textColor="#717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCadastrar" />

    <TextView
        android:id="@+id/txtMsgErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toEndOf="@+id/lblCPF"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeCompleto"
        tools:layout_constraintTop_toBottomOf="@id/txtNomeCompleto" />

</androidx.constraintlayout.widget.ConstraintLayout>